fix media query for phone position on tablet and larger screens

--- a/src/index.css
+++ b/src/index.css
@@ -42,12 +42,7 @@ body {
     .phone {
         max-width: 430px;
         height: 850px;
-    }
-}
-
-@media (max-width: 1400px) {
-    .phone {
-        margin-top: 7vh;
+        margin-top: 8vh;
     }
 }
 
